--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
-# ignore .vs\ folder
-.vs\
-# ignore bin\ folder
-**\bin\
-# ignore obj\ folder
-**\obj\
+# ignore .vs/ folder
+.vs/
+# ignore bin/ folder
+bin/
+# ignore obj/ folder
+obj/
